# efRouting_test

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .env  Dockerfile  Makefile  go.mod  go.sum
backend/cmd/api/: main.go
backend/internal/app/cases/: LaunchUseCases.go
backend/internal/app/ports/: LaunchRepository.go
backend/internal/app/services/: LaunchServices.go
backend/internal/infra/config/: database.go
backend/internal/infra/dto/: RateDTO.go  SimplyLaunchDTO.go
backend/internal/infra/entities/: LaunchEntity.go
backend/internal/infra/handlers/: LaunchHandler.go
backend/internal/infra/models/: Input.go  Response.go
backend/internal/infra/repository/: DynamoLaunchRepository.go
frontend/: Dockerfile  components.json  next.config.ts  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
infra/: package-lock.json
infra/lib/: compute-stack.ts  database-stack.ts
lambda/: Dockerfile  Makefile  pyproject.toml  pytest.ini  requirements.txt  template.yaml
lambda/src/spacex/: main.py
lambda/src/spacex/app/driven_ports/: dynamo_repo.py  launch_repo.py
lambda/src/spacex/app/services/: ETLServices.py
lambda/src/spacex/infra/driven_adapters/: dynamo_repo_impl.py  launch_repository_impl.py
lambda/src/spacex/infra/models/: LaunchRecord.py
lambda/tests/: conftest.py
lambda/tests/e2e/: test_fetch.py
lambda/tests/integration/: test_extraction.py
lambda/tests/unit/: test_extract.py  test_parsing.py
lambda/tests/unit/data/: launch.py
(+25 files in other folders)
